
 - We have removed the variable si::*break-enable* that was causing
   INVOKE-DEBUGGER to return.

 - ECL's support of :CASE has improved. Filenames preferred case is downcase,
   as in every Unix, while logical pathname's case is uppercase. Conversion
   between cases has also been fixed: formerly, MAKE-PATHNAME did not interpret
   :CASE as the original path case, but as the destination.

* Visible changes:

 - "fasb" is now a valid FASL file type, accepted by ECL even in absence of
   ASDF.

 - EXT:GC ignores any argument passed to it.

 - ECL's compiler now understands the unboxed type :long-long.

 - A new special form, EXT:WITH-BACKEND allows us to select the code depending
   on whether it is going to be processed by the interpreter or by the C
   compiler.
      (defun example ()
        (ext:with-backend
          :bytecodes (print 3)
          :c/c++ (print 2)))
   The two currently available backends are :bytecodes and :c/c++.

 - Added accurate type proclamations for all functions in the ANSI CL
   specification.

 - The compiler is now shipped as a single FASL file, cmp.fas, without
   extra files such as sysfun.lsp

 - DECLAIM proclamation and toplevel DEFMACRO definitions do not propagate
   beyond the compiled file.

 - AREF/ASET can now be open-coded by the C compiler.

 - Compilation policies (including optimization and safety checks) are now
   defined as flags that are activated and deactivated by certain optimization
   levels. In order for the flag to be active, all conditions have to be
   matched. For instance
      (define-policy inline-slot-access :on speed 1 :off debug 2 :off safety 2
        "Inline access to structures and sealed classes")
   slot inlining would be activated by a SPEED of 1, but only if DEBUG and
   SAFETY are below 2.

 - Important performance improvements in sequence functions, such as FIND,
   SEARCH, REPLACE, POSITION, COUNT, REMOVE, DELETE, SUBSTITUTE, NSUBSTITUTE,